Fix the post's image overlapping the navTabs component

--- a/components/post/post.module.css
+++ b/components/post/post.module.css
@@ -103,7 +103,6 @@
 
 .imageContainer {
   flex: 1;
-  z-index: -1;
   height: 112px;
   display: none;
   position: relative;
